<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name_criteria">RestaurantFinder - Criteria</string>
	<string name="app_name_reviews">RestaurantFinder - Reviews</string>
	<string name="app_name_review">RestaurantFinder - Review</string>
	<string name="app_short_name">Restaurants</string>

	<string name="menu_get_reviews">Get reviews</string>
	<string name="menu_web_review">Get full review</string>
	<string name="menu_map_review">Map location</string>
	<string name="menu_call_review">Call restaurant</string>
	<string name="menu_change_criteria">Change review criteria</string>
	<string name="menu_get_next_page">Get next page of results</string>

	<string name="intro_blurb_criteria">Enter review criteria</string>
	<string name="intro_blurb_detail">Review details</string>

	<string name="location_entry_label">Location (City, ST):</string>
	<string name="location_label">Location:</string>
	<string name="cuisine_label">Cuisine:</string>
	<string name="review_label">Review:</string>
	<string name="rating_label">Rating:</string>
	<string name="name_label">Name:</string>
	<string name="title_label">Title:</string>
	<string name="author_label">Author:</string>
	<string name="link_label">Link:</string>
	<string name="phone_label">Phone:</string>
	<string name="alert_label">Sorry!</string>
	
	<string name="location_not_supplied_message">Location must be specified \n(City, State [Country]).</string>
	<string name="no_phone_message">No phone number is available to dial for this review.</string>
	<string name="no_location_message">No location is available to map for this review.</string>
	<string name="no_link_message">No URL is available to open for this review.</string>

    <string name="get_reviews_button_label">Get Reviews</string>

</resources>
