<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:gravity="center_horizontal" android:padding="10px"
		android.setVerticalScrollBarEnabled="true">

		<ImageView android:id="@+id/review_image"
			android:layout_width="100px" android:layout_height="100px"
			android:layout_marginLeft="10px" android:layout_marginBottom="5px" />

		<TextView android:id="@+id/name_detail" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_below="@id/review_image"
			android:layout_marginLeft="10px" android:layout_marginBottom="5px"
			style="@style/intro_blurb" />

		<TextView android:id="@+id/rating_label_detail"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_below="@id/name_detail" android:layout_marginLeft="10px"
			android:layout_marginBottom="5px" style="@style/label" android:text="@string/rating_label" />
		<TextView android:id="@+id/rating_detail"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_below="@id/rating_label_detail"
			android:layout_marginLeft="10px" android:layout_marginBottom="5px"
			style="@style/view_text" />

		<TextView android:id="@+id/review_label_detail"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_below="@id/rating_detail" android:layout_marginLeft="10px"
			android:layout_marginBottom="5px" style="@style/label" android:text="@string/review_label" />
		<TextView android:id="@+id/review_detail"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_below="@id/review_label_detail"
			android:layout_marginLeft="10px" android:layout_marginBottom="5px"
			style="@style/view_text" />

		<TextView android:id="@+id/location_label_detail"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_below="@id/review_detail" android:layout_marginLeft="10px"
			android:layout_marginBottom="5px" style="@style/label" android:text="@string/location_label" />
		<TextView android:id="@+id/location_detail"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_below="@id/location_label_detail"
			android:layout_marginLeft="10px" android:layout_marginBottom="5px"
			style="@style/view_text" />

		<TextView android:id="@+id/phone_label_detail"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_below="@id/location_detail" android:layout_marginLeft="10px"
			android:layout_marginBottom="5px" style="@style/label" android:text="@string/phone_label" />
		<TextView android:id="@+id/phone_detail"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_below="@id/phone_label_detail"
			android:layout_marginLeft="10px" android:layout_marginBottom="5px"
			style="@style/view_text" />

	</RelativeLayout>
</ScrollView>
